rust/mlt/src/ui/snapshots/mlt__ui__tests__enter_opens_a_file_and_escape_returns_to_the_browser.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌line-boolean.mvt - h:help, q┐┌Map View────────────────────────────────────────────────────────────┐"
"│>> All                      ││                                                                    │"
"│     Layer: layer (1 LineStr││                                                                    │"
"│       Feat 0: LineString (3││     ⢰⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⡆     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"└◄██████████════════════════►┘│     ⢸                                                        ⡇     │"
"┌Properties (all layers)─────┐│     ⢸                                                        ⡇     │"
"│Layers: 1                   ││     ⢸                                                        ⡇     │"
"│Features: 1                 ││     ⢸                                                        ⡇     │"
"│layer: 1 features           ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"│                            ││     ⢸                                                        ⡇     │"
"└────────────────────────────┘│     ⢸                                                        ⡇     │"
"┌Geometry (all layers)───────┐│     ⢸                                                        ⡇     │"
"│Vertices: 3                 ││     ⢸                                                        ⡇     │"
"│LineString: 1               ││     ⢸                                                        ⡇     │"
"│                            ││     ⠸⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠇     │"
"│                            ││                                                                    │"
"│                            ││                                                                    │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
