rust/mlt/src/ui/snapshots/mlt__ui__tests__file_browser_previews_the_selected_tile.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌MLT Files (6 found) - ↑/↓ navigate, Enter open, h help, q quit Click┐┌Tile Preview────────────────┐"
"│   File                         Size   Enc % Layers   Features Notes││⡏⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⢹│"
"│   line-boolean.mvt              40B      -       1          1      ││⡇                          ⢸│"
"│>> multiline-boolean.mvt         46B      -       1          1      ││⡇                          ⢸│"
"│   multipoint-boolean.mvt        37B      -       1          1      ││⡇                          ⢸│"
"│   multipolygon-boolean.mvt      65B      -       1          1      ││⡇                          ⢸│"
"│   point-boolean.mvt             35B      -       1          1      ││⡇                          ⢸│"
"│   polygon-boolean.mvt           41B      -       1          1      ││⡇                          ⢸│"
"│                                                                    ││⣇⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸│"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Filter (click to toggle)────┐"
"│                                                                    ││[Reset filters]             ▲"
"│                                                                    ││                            █"
"│                                                                    ││Extensions:                 █"
"│                                                                    ││  [ ] mvt                   ║"
"│                                                                    ││                            ║"
"│                                                                    ││Geometry Types:             ║"
"│                                                                    ││  [ ] Point                 ║"
"│                                                                    ││  [ ] LineString            ▼"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌File Info───────────────────┐"
"│                                                                    ││File: multiline-boolean.mvt ▲"
"│                                                                    ││Size: 46B  raw MLT file size█"
"│                                                                    ││Encoding: -  MLT / (data +  █"
"│                                                                    ││metadata)                   ║"
"│                                                                    ││Data: -  decoded payload    ║"
"│                                                                    ││size                        ║"
"│                                                                    ││Metadata: -  encoding       ║"
"│                                                                    ││overhead                    ▼"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────┘"
