rust/mlt/src/ui/snapshots/mlt__ui__tests__file_browser_sorts_by_a_clicked_header.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌MLT Files (6 found) - ↑/↓ navigate, Enter open, h help, q quit Click┐┌Tile Preview────────────────┐"
"│   File                         Size   Enc % Layers   Features Notes││Select a tile file (.mlt /  │"
"│   point-boolean.mvt             35B      -       1          1      ││.mvt) to preview            │"
"│   multipoint-boolean.mvt        37B      -       1          1      ││                            │"
"│>> line-boolean.mvt              40B      -       1          1      ││                            │"
"│   polygon-boolean.mvt           41B      -       1          1      ││                            │"
"│   multiline-boolean.mvt         46B      -       1          1      ││                            │"
"│   multipolygon-boolean.mvt      65B      -       1          1      ││                            │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Filter (click to toggle)────┐"
"│                                                                    ││[Reset filters]             ▲"
"│                                                                    ││                            █"
"│                                                                    ││Extensions:                 █"
"│                                                                    ││  [ ] mvt                   ║"
"│                                                                    ││                            ║"
"│                                                                    ││Geometry Types:             ║"
"│                                                                    ││  [ ] Point                 ║"
"│                                                                    ││  [ ] LineString            ▼"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌File Info───────────────────┐"
"│                                                                    ││File: line-boolean.mvt      ▲"
"│                                                                    ││Size: 40B  raw MLT file size█"
"│                                                                    ││Encoding: -  MLT / (data +  █"
"│                                                                    ││metadata)                   ║"
"│                                                                    ││Data: -  decoded payload    ║"
"│                                                                    ││size                        ║"
"│                                                                    ││Metadata: -  encoding       ║"
"│                                                                    ││overhead                    ▼"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────┘"
