rust/mlt/src/ui/snapshots/mlt__ui__tests__filter_click_narrows_the_file_list.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌MLT Files (1/6 found) - ↑/↓ navigate, Enter open, h help, q quit Cli┐┌Tile Preview────────────────┐"
"│   File                         Size   Enc % Layers   Features Notes││Select a tile file (.mlt /  │"
"│>> point-boolean.mvt             35B      -       1          1      ││.mvt) to preview            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    ││                            │"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌Filter (click to toggle)────┐"
"│                                                                    ││[Reset filters]             ▲"
"│                                                                    ││                            █"
"│                                                                    ││Extensions:                 █"
"│                                                                    ││  [ ] mvt                   ║"
"│                                                                    ││                            ║"
"│                                                                    ││Geometry Types:             ║"
"│                                                                    ││  [x] Point                 ║"
"│                                                                    ││  [ ] LineString            ▼"
"│                                                                    │└────────────────────────────┘"
"│                                                                    │┌File Info───────────────────┐"
"│                                                                    ││File: point-boolean.mvt     ▲"
"│                                                                    ││Size: 35B  raw MLT file size█"
"│                                                                    ││Encoding: -  MLT / (data +  █"
"│                                                                    ││metadata)                   ║"
"│                                                                    ││Data: -  decoded payload    ║"
"│                                                                    ││size                        ║"
"│                                                                    ││Metadata: -  encoding       ║"
"│                                                                    ││overhead                    ▼"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────┘"
