rust/mlt/src/ui/snapshots/mlt__ui__tests__help_overlay_lists_the_layer_overview_keys.snap
---
source: mlt/src/ui/tests.rs
expression: render(&mut app)
---
"┌sample.mlt - h:help, q:quit,┐┌Map View────────────────────────────────────────────────────────────┐"
"│>> All            ┌Help (↑/↓/scroll to navigate, any other key to close)───────┐                  │"
"│     Layer: water │Keyboard                                                    ▲                  │"
"│     Layer: roads │  ?  h  F1            Toggle this help                      █⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢒⡲⡆     │"
"│     Layer: poi (2│  q  Ctrl+c           Quit                                  █ ⡤⠤⠤⠤⠤⠤⠤⢤⡔⠁ ⡇     │"
"│                  │  Esc                 Back to file browser                  █ ⡇    ⡠⠊⠁⡇  ⡇     │"
"│                  │  Up/Down  j/k        Navigate feature tree                 █⣀⣇⣀⣀⠔⠊   ⡇  ⡇     │"
"│                  │  PageUp/PageDown     Scroll by page                        █ ⣧⣒⣹⣀⣀⣀⣀⣀⡇  ⡇     │"
"│                  │  Home/End            Jump to first/last                    █⠊  ⢸        ⡇     │"
"│                  │  Enter               Expand/collapse layer or feature      █   ⢸        ⡇     │"
"│                  │  +  =  Right         Expand selected node                  █   ⢸        ⡇     │"
"│                  │  -                   Collapse (or jump to parent)          █   ⢸        ⡇     │"
"│                  │  *                   Expand/collapse all layers            ║   ⢸        ⡇     │"
"│                  │  Left                Jump to parent node                   ║   ⢸        ⡇     │"
"└◄██████████═══════│  <  >                Scroll the tree sideways              ║   ⢸        ⡇     │"
"┌Properties (all la│  Shift+Left/Right    Scroll the tree sideways              ║⠉⠉⠉⢹⠉⠉⠉⠉⠉⠉⠉⠉⡇     │"
"│Layers: 3         │  Ctrl+h / Ctrl+l     Resize left/right split               ║   ⢸        ⡇     │"
"│Features: 6       │  Shift+J / Shift+K   Resize top/bottom split               ║   ⢸        ⡇     │"
"│water: 2 features │                                                            ║   ⢸        ⡇     │"
"│roads: 2 features │Mouse                                                       ║   ⢸        ⡇     │"
"│poi: 2 features   │  Click tree item     Select (drill into level)             ║   ⢸        ⡇     │"
"│                  │  Double-click        Expand/collapse                       ║   ⢸        ⡇     │"
"└──────────────────│  Hover tree/map      Highlight the layer, feature, or part ║   ⢸        ⡇     │"
"┌Geometry (all laye│                      at the current level                  ║⠤⠤⠤⠼        ⡇     │"
"│Vertices: 29      │  Click on map        Select the hovered item               ║            ⡇     │"
"│Point: 1          │  Scroll panels       Scroll tree/properties/geometry       ║            ⡇     │"
"│LineString: 1     │  Scroll sideways     Scroll the tree horizontally          ║⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠇     │"
"│Polygon: 1        │  Drag dividers       Resize panels                         ▼                  │"
"│MultiPoint: 1     └────────────────────────────────────────────────────────────┘                  │"
"└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
